[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Scripts/Flag.gd" type="Script" id=1]
[ext_resource path="res://Assets/Meshes/VictoryParticles.tres" type="CubeMesh" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.05, 1, 0.05 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.286275, 0.219608, 0.0745098, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CylinderShape" id=4]
radius = 1.25
height = 1.0

[node name="Flag" type="StaticBody"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Pole" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
radius = 0.05
height = 2.0
material = SubResource( 2 )

[node name="Flag" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.55, 1.7, 0 )
width = 1.0
height = 0.5
depth = 0.04
material = SubResource( 3 )

[node name="Objective" type="Area" parent="."]
input_ray_pickable = false
collision_layer = 0

[node name="Hitbox" type="CollisionShape" parent="Objective"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0 )
shape = SubResource( 4 )

[node name="VictoryParticles" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
emitting = false
amount = 12
mesh = ExtResource( 2 )
flag_rotate_y = true
direction = Vector3( 0, 1, 0 )
flatness = 0.75
initial_velocity = 10.0
initial_velocity_random = 0.2
angular_velocity = 2.0
tangential_accel = 2.0
tangential_accel_random = 0.5
angle = 45.0
angle_random = 0.5
color = Color( 1, 0, 0, 1 )
hue_variation = 0.75
hue_variation_random = 0.5

[node name="VictoryTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="input_event" from="." to="." method="set_destination"]
[connection signal="body_entered" from="Objective" to="." method="player_entered"]
[connection signal="body_exited" from="Objective" to="." method="player_exited"]
[connection signal="timeout" from="VictoryTimer" to="." method="stop_particles"]
